scrollbar fix

--- a/index.css
+++ b/index.css
@@ -2,11 +2,24 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
+
+
+
 html, body {
   padding: 0;
   margin: 0;
   width: 100%;
   height: 100%;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .icon {
